--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
     "json-server": "^0.17.4",
+    "ngx-currency": "^3.0.0",
     "ngx-mask": "^14.3.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
