--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "deploy": "npm run build & npm run ghpages",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "json:server": "json-server --watch db.json",
-    "json:server:routes": "json-server --watch db.json --routes routes.json"
+    "json:server": "json-server --watch db.json"
   },
   "private": true,
   "dependencies": {
